--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Practice repo</title>
 </head>
 <body>
     <h1>Pushin practice to git hub</h1>
+    <p>test </p>
+    <p>porsu xm</p>
 </body>
 </html>
