--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h1>Pushin practice to git hub</h1>
     <p>test </p>
     <p>porsu xm</p>
+    <img src="./image/Illustration Mahim.jpg" alt="">
 </body>
 </html>
